Prevent clicks on fb and pass through clicks on shift+click resolves #6

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -17,10 +17,11 @@ body {
 }
 
 #octa-overlay {
-    background: transparent;
+    background: rgba(191,191,191,0.3);
     height: 100%;
     left: 0;
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1000;
 }
